--- a/gw2t.css
+++ b/gw2t.css
@@ -474,11 +474,19 @@ html, body,
 .cntComposition button img {
 	width: 24px; height: 24px;
 }
-.cntComposition button.btnUncheck img {
+button.btnUncheck {
+	background: url("img/ui/uncheck.png") center no-repeat, linear-gradient(to bottom, #444 0%, #333 100%);
 	width: 64px; height: 32px;
 }
-.cntComposition button.btnDefault img {
+button.btnUncheck:active {
+	background: url("img/ui/uncheck.png") center no-repeat, linear-gradient(to bottom, #333 0%, #444 100%);
+}
+button.btnDefault {
+	background: url("img/ui/default.png") center no-repeat, linear-gradient(to bottom, #444 0%, #333 100%);
 	width: 32px; height: 32px;
+}
+button.btnDefault:active {
+	background: url("img/ui/default.png") center no-repeat, linear-gradient(to bottom, #333 0%, #444 100%);
 }
 
 .cntComposition hr {
@@ -2150,6 +2158,15 @@ button.btnToggle {
 	-webkit-animation: spin 1s linear infinite;
     -moz-animation: spin 1s linear infinite;
     animation: spin 1s linear infinite;
+}
+.cssLimitExceed {
+	color: #ff2200;
+}
+.cssLimitWithin {
+	color: #44dd44;
+}
+.cssLimitEqual {
+	color: white;
 }
 
 copper {
