Sale update, video link in sale

--- a/gw2t.css
+++ b/gw2t.css
@@ -837,6 +837,12 @@ textarea.jsCopyCode {
 .dsbSalePriceOld {
 	color: #b3a082;
 }
+.dsbSaleVideo {
+	display: none;
+}
+.dsbSaleEntry:hover .dsbSaleVideo {
+	display: inline;
+}
 
 .dsbVendorPriceKarma {
 	float: right;
