--- a/style/account.css
+++ b/style/account.css
@@ -11,7 +11,7 @@
 	display: block;
 	width: 32px; height: 32px;
 	position: absolute;
-	right: 0;
+	top: 0; right: 0;
 	background-image: url("../img/ui/close.png");
 }
 #accClose:active {
