--- a/gw2t.css
+++ b/gw2t.css
@@ -73,6 +73,14 @@ body > windowMain
 	0% { background-size: 25%; }
 	100% { background-size: 100%; }
 }
+@keyframes aniFadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+}
+@keyframes aniFadeOut {
+	0% { opacity: 1; }
+	100% { opacity: 0; }
+}
 
 html, body {
 	width: 100%;
