--- a/style/tile.css
+++ b/style/tile.css
@@ -14,7 +14,7 @@ html, body {
 	bottom: 24px;
 }
 
-#panelMap, #paneClock, #paneMenu, #tmlClose, .chnEvents {
+#panelMap, #paneClock, #paneMenu, .chnEvents {
 	display: none;
 }
 
