--- a/gw2t.css
+++ b/gw2t.css
@@ -444,7 +444,7 @@ html, body,
 	margin-bottom: 0;
 }
 .itemContext li:hover {
-	background-image: linear-gradient(to right, #7c7253 0%, rgba(255,255,255,0) 100%);
+	background-image: linear-gradient(to right, #7c7253 0%, transparent 100%);
 	animation: aniHighlight 0.4s;
 }
 .itemContext kbd { /* The submenu icon */
